src/objects/RePayment__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RePayments</relationshipLabel>
        <relationshipName>RePayments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Available Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Closing_Date__c</fullName>
        <label>Closing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Funding_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Funding Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fundingo_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fundingo Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fundingo_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Fundingo Id</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Published__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Return__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Return %</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>RePayment</label>
    <listViews>
        <fullName>Active_RePayments</fullName>
        <columns>NAME</columns>
        <columns>Funding_Amount__c</columns>
        <columns>Available_Amount__c</columns>
        <columns>Return__c</columns>
        <columns>Closing_Date__c</columns>
        <columns>Published__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Published__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active RePayments</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Funding_Amount__c</columns>
        <columns>Available_Amount__c</columns>
        <columns>Return__c</columns>
        <columns>Closing_Date__c</columns>
        <columns>Published__c</columns>
        <columns>Active__c</columns>
        <columns>Fundingo_Id__c</columns>
        <columns>Fundingo_Deleted__c</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Closing_date_is_within_a_week</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Account__c</columns>
        <columns>Active__c</columns>
        <columns>Available_Amount__c</columns>
        <columns>Closing_Date__c</columns>
        <columns>Fundingo_Deleted__c</columns>
        <columns>Fundingo_Id__c</columns>
        <columns>Published__c</columns>
        <columns>Return__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Funding_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Closing_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>NEXT_N_DAYS:7</value>
        </filters>
        <label>Closing date is within a week</label>
    </listViews>
    <nameField>
        <label>RePayment  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RePayments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>